# hackathon-ipssi

./: .gitignore  README.md  docker-compose.yml  package-lock.json
document-classifier/: Dockerfile  document_classifier.py  flask_api.py  requirements.txt
document-classifier/artifacts/: ocr_like.csv  preds.csv  text_model_linear_svc.joblib  text_pipeline_linear_svc.joblib  tfidf_vectorizer.joblib
generation-dataset/: dataset_study.md  pipeline_ocr.py
generation-dataset/dataset/: annotations.csv  ocr_texts.csv
hkt-backend/: .dockerignore  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  env.sample  eslint.config.js  package-lock.json  package.json
hkt-backend/src/: index.js  mongo.js  server.js
hkt-backend/src/auth/: jwt.js
hkt-backend/src/middleware/: requireAdmin.js  requireAuth.js  upload.js
hkt-backend/src/models/: Document.js  User.js
hkt-backend/src/routes/: admin.js  auth.js  documents.js  health.js  users.js
hkt-frontend/: Dockerfile.dev  index.html  package-lock.json  package.json
hkt-frontend/src/: App.jsx  api.js  index.css
hkt-frontend/src/src/: App.jsx  api.js  index.css
hkt-frontend/src/src/pages/: AdminPage.jsx  CRMPage.jsx  CoherencePage.jsx  DocumentDetailPage.jsx  DocumentsPage.jsx  ProfilePage.jsx  UploadPage.jsx
ocr-server/: README.md  pyproject.toml
ocr-server/app/: __init__.py  main.py
ocr-server/app/controllers/: ocr_controller.py
ocr-server/app/models/: __init__.py  ocr_models.py
ocr-server/app/services/: __init__.py  ocr_service.py
