[project]
name = "ocr-server"
version = "0.1.0"
description = "OCR server built with FastAPI"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
